Fixed the routing and aligned jumbotron text to the center

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
 div.home {
     margin-top: 5px;
+    text-align: center;
 }
